; ModuleID = '/home/carl/AnghaBench/postgres/src/pl/plpgsql/src/extr_pl_scanner.c_plpgsql_location_to_lineno.c'
source_filename = "/home/carl/AnghaBench/postgres/src/pl/plpgsql/src/extr_pl_scanner.c_plpgsql_location_to_lineno.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@scanorig = common dso_local global i8* null, align 8
@cur_line_start = common dso_local global i8* null, align 8
@cur_line_end = common dso_local global i8* null, align 8
@cur_line_num = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @plpgsql_location_to_lineno(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = icmp slt i32 %5, 0
  br i1 %6, label %10, label %7

7:                                                ; preds = %1
  %8 = load i8*, i8** @scanorig, align 8
  %9 = icmp eq i8* %8, null
  br i1 %9, label %10, label %11

10:                                               ; preds = %7, %1
  store i32 0, i32* %2, align 4
  br label %40

11:                                               ; preds = %7
  %12 = load i8*, i8** @scanorig, align 8
  %13 = load i32, i32* %3, align 4
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds i8, i8* %12, i64 %14
  store i8* %15, i8** %4, align 8
  %16 = load i8*, i8** %4, align 8
  %17 = load i8*, i8** @cur_line_start, align 8
  %18 = icmp ult i8* %16, %17
  br i1 %18, label %19, label %21

19:                                               ; preds = %11
  %20 = call i32 (...) @location_lineno_init()
  br label %21

21:                                               ; preds = %19, %11
  br label %22

22:                                               ; preds = %31, %21
  %23 = load i8*, i8** @cur_line_end, align 8
  %24 = icmp ne i8* %23, null
  br i1 %24, label %25, label %29

25:                                               ; preds = %22
  %26 = load i8*, i8** %4, align 8
  %27 = load i8*, i8** @cur_line_end, align 8
  %28 = icmp ugt i8* %26, %27
  br label %29

29:                                               ; preds = %25, %22
  %30 = phi i1 [ false, %22 ], [ %28, %25 ]
  br i1 %30, label %31, label %38

31:                                               ; preds = %29
  %32 = load i8*, i8** @cur_line_end, align 8
  %33 = getelementptr inbounds i8, i8* %32, i64 1
  store i8* %33, i8** @cur_line_start, align 8
  %34 = load i32, i32* @cur_line_num, align 4
  %35 = add nsw i32 %34, 1
  store i32 %35, i32* @cur_line_num, align 4
  %36 = load i8*, i8** @cur_line_start, align 8
  %37 = call i8* @strchr(i8* %36, i8 signext 10)
  store i8* %37, i8** @cur_line_end, align 8
  br label %22

38:                                               ; preds = %29
  %39 = load i32, i32* @cur_line_num, align 4
  store i32 %39, i32* %2, align 4
  br label %40

40:                                               ; preds = %38, %10
  %41 = load i32, i32* %2, align 4
  ret i32 %41
}

declare dso_local i32 @location_lineno_init(...) #1

declare dso_local i8* @strchr(i8*, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
